refactor: update cart and transaction services to improve item processing and retrieval